fix nav alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ nav {
 
 nav h3 {
   margin-left: 10px;
-
+  text-align: center;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 300;
